--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet"  href="./styles/reset.css" media="all"/>
     <link rel="stylesheet"  href="./styles/styles.css" media="all"/>
     <title>Etch-A-Sketch</title>
 </head>
 <body>
+    <div id="main-container">
+        <h1 id="page-title">Etch-a-Sketch</h1>
+        <div id="color-buttons-container" class="options-containers">
+            <button class="color-options" id="white-color"></button>
+            <button class="color-options" id="rainbow-color"></button>
+            <button class="color-options" id="gray-scale-color"></button>
+            <button class="color-options" id="eraser"></button>
+            <button class="color-options" id="color-picker"></button>
+        </div>
+        <div id="sketchpad"></div>
+        <div id="grid-containder" class="options-containders">
+            <button class="color-options" id="clear"></button>
+            <input type="range" min="4" max="100" value="50" class="slider" id="grid-width-slider">
+        </>
+    </div>
     
 </body>
 </html>
