Added Slider Range Style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="main-container">
       <h1 id="page-title">Etch-a-Sketch</h1>
       <div id="color-buttons-container" class="options-containers">
-        <button class="color-options-btn" id="green-color">Green</button>
+        <button class="color-options-btn" id="white-color">White</button>
         <button class="color-options-btn" id="rainbow-color">Rainbow</button>
         <button class="color-options-btn" id="gray-scale-color">
           Gray Scale
