Button Border for  Hover and  Focus
Changed the philosophy for the button border: added a wrapper div for every button to act as the gradient border.

--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
     <div id="main-container">
       <h1 id="page-title">Etch-a-Sketch</h1>
       <div id="color-buttons-container" class="options-containers">
-        <button class="color-options-btn" id="white-color">White</button>
-        <button class="color-options-btn" id="rainbow-color">Rainbow</button>
-        <button class="color-options-btn" id="gray-scale-color">
-          Gray Scale
-        </button>
-        <button class="color-options-btn" id="eraser">Eraser</button>
-        <button class="color-options-btn" id="color-picker">Pick:</button>
+        <div class="btn-wrapper">
+          <button class="color-options-btn" id="white-color">White</button>
+        </div>
+        <div class="btn-wrapper">
+          <button class="color-options-btn" id="rainbow-color">Rainbow</button>
+        </div>
+        <div class="btn-wrapper">
+          <button class="color-options-btn" id="gray-scale-color">
+            Gray Scale
+          </button>
+        </div>
+        <div class="btn-wrapper">
+          <button class="color-options-btn" id="eraser">Eraser</button>
+        </div>
+        <div class="btn-wrapper">
+          <button class="color-options-btn" id="color-picker">Pick:</button>
+        </div>
       </div>
       <div id="sketchpad"></div>
       <div id="grid-containder" class="options-containers">
-        <button class="color-options-btn" id="clear">Clear</button>
+        <div class="btn-wrapper">
+          <button class="color-options-btn" id="clear">Clear</button>
+        </div>
         <input
           type="range"
           min="4"
