Added Color Picker

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <button class="color-options-btn" id="eraser">Eraser</button>
         </div>
         <div class="btn-wrapper">
-          <button class="color-options-btn" id="color-picker">Pick:</button>
+          <button class="color-options-btn" id="color-picker-btn">
+            Pick: <input type="color" id="color-picker" value="#00ff41" />
+          </button>
         </div>
       </div>
       <div id="sketchpad"></div>
