--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           class="slider"
           id="grid-width-slider"
         />
+        <p class="test-slider"></p>
       </div>
     </div>
   </body>
+  <script src="scripts/main.js"></script>
 </html>
