Create New and Lighter UI Style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/reset.css" media="all" />
-    <link rel="stylesheet" href="./styles/styles.css" media="all" />
+    <link rel="stylesheet" href="./styles/light-style.css" media="all" />
     <title>Etch-A-Sketch</title>
   </head>
   <body>
