Change Color Picker Default Color
Was green and now is orange.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="btn-wrapper">
           <button class="color-options-btn" id="color-picker-btn">
-            Pick: <input type="color" id="color-picker" value="#00ff41" />
+            Pick: <input type="color" id="color-picker" value="#fa991c" />
           </button>
         </div>
       </div>
